# dump1090-radar-display

./: .gitignore  README.md  build_flash.sh  flash_win.ps1  lv_conf.h  platformio.ini  run.sh  sdkconfig.defaults  setup.ps1  setup.sh  test_data.cpp
boards/: esp32-c6-devkitc-1.json  esp32-s3-4848s040.json  esp32-s3-devkitc-1-n16r8.json  esp32-s3-devkitc-1-n8r8.json
docs/: hardware-reference.md
esp_idf_psram_test/: CMakeLists.txt  platformio.ini
esp_idf_psram_test/src/: main.c
pc_sim/: CMakeLists.txt  lv_conf.h  main.c
radar/: extra_src.py  lv_conf.h  platformio.ini
radar/src/: lgfx_config.h  main.cpp  radar_ui.cpp
radar/src/patches/: esp_lcd_panel_rgb.h  lcd_rgb_patch.h  prix_fix.h
src/: aircraft_data.cpp  aircraft_data.h  config.example.h  config.h  coord_convert.cpp  coord_convert.h  land_mask.h  lgfx_config.h  main.cpp  mqtt_manager.cpp  mqtt_manager.h  radar_ui.cpp  radar_ui.h
src/fonts/: lv_font_monoid_12.c
tools/: land_mask_map.html  png_to_land.py
